--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </style>
 </head>
 <body>
-  <button id="new-equation-top" class="new-equation-button">NEW EQUATION</button>
+  <button id="new-equation-top" class="new-equation-button">NEW EQUATION L3</button>
   <div id="equation-container"></div>
   <div id="score-box">Score = 0</div>
   <script>
