--- a/index.html
+++ b/index.html
@@ -78,11 +78,14 @@
   </style>
 </head>
 <body>
-  <button id="new-equation-top" class="new-equation-button">NEW EQUATION L3</button>
+  <button id="new-equation-l1" class="new-equation-button">NEW EQUATION L1</button>
+  <button id="new-equation-l2" class="new-equation-button">NEW EQUATION L2</button>
+  <button id="new-equation-l3" class="new-equation-button">NEW EQUATION L3</button>
   <div id="equation-container"></div>
   <div id="score-box">Score = 0</div>
   <script>
     let a, b, c, d;
+    let l = 3; // Default to L3
     let score = 0;
     let successCount = 0;
     let inputCount = 0; // Track number of user inputs
@@ -294,14 +297,18 @@ if (
       }
     }
 
-    function handleNewEquation() {
-  generateEquation(); // Generates a new equation
-  window.scrollTo(0, 0); // Scroll to the top of the page
+ function handleNewEquation() {
+  if (l === 3) {
+    generateEquation(); // Only generate when l = 3
+    window.scrollTo(0, 0); // Scroll to the top of the page
+  }
 }
 
 // Add event listener to the top button for generating a new equation
 window.onload = () => {
-  document.getElementById("new-equation-top").addEventListener("click", handleNewEquation);
+    document.getElementById("new-equation-l1").addEventListener("click", () => { l = 1; });
+document.getElementById("new-equation-l2").addEventListener("click", () => { l = 2; });
+document.getElementById("new-equation-l3").addEventListener("click", () => { l = 3; handleNewEquation(); });
 };
 
   </script>
