--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div id="score-box">Score = 0</div>
   <script>
     let a, b, c, d;
-    let l = 3; // Default to L3
+    let l = null; // Initially set to null
     let score = 0;
     let successCount = 0;
     let inputCount = 0; // Track number of user inputs
@@ -155,23 +155,60 @@ function updateScore(bonusPoints) {
   // Reset inputCount when a new equation is generated
   inputCount = 0;
 
+  // Clear previous equation
   const equationContainer = document.getElementById("equation-container");
   equationContainer.innerHTML = "";
 
-  do {
-    a = Math.floor(Math.random() * 21) - 10;
-    c = Math.floor(Math.random() * 21) - 10;
-  } while (a === c || a === 0 || c === 0 || Math.abs(a - c) === 1); // Ensure a and c are not equal, not zero, and their difference is not 1
+  if (l === 1) {
+    const k = Math.floor(Math.random() * 4) + 1; // Random integer from 1 to 4
 
-  b = Math.floor(Math.random() * 21) - 10;
-  d = Math.floor(Math.random() * 21) - 10;
+    if (k === 1) {
+      do { a = Math.floor(Math.random() * 21) - 10; } while (a === 0 || a === 1);
+      b = 0; c = 0;
+      do { d = Math.floor(Math.random() * 21) - 10; } while (d === 0);
+    } else if (k === 2) {
+      a = 0; d = 0;
+      do { c = Math.floor(Math.random() * 21) - 10; } while (c === 0 || c === 1);
+      do { b = Math.floor(Math.random() * 21) - 10; } while (b === 0);
+    } else if (k === 3) {
+      a = 1; c = 0;
+      do { b = Math.floor(Math.random() * 21) - 10; } while (b === 0);
+      do { d = Math.floor(Math.random() * 21) - 10; } while (d === 0);
+    } else if (k === 4) {
+      a = 0; c = 1;
+      do { b = Math.floor(Math.random() * 21) - 10; } while (b === 0);
+      do { d = Math.floor(Math.random() * 21) - 10; } while (d === 0);
+    }
+  } 
+  
+  else if (l === 2) {
+    const k = Math.floor(Math.random() * 2) + 1; // Random integer from 1 to 2
 
-  // Ensure b and d are not zero
-  while (b === 0) {
-    b = Math.floor(Math.random() * 21) - 10;
-  }
-  while (d === 0) {
-    d = Math.floor(Math.random() * 21) - 10;
+    if (k === 1) {
+      do { a = Math.floor(Math.random() * 21) - 10; } while (a === 0 || a === 1);
+      c = 0;
+      do { b = Math.floor(Math.random() * 21) - 10; } while (b === 0);
+      do { d = Math.floor(Math.random() * 21) - 10; } while (d === 0);
+    } else if (k === 2) {
+      a = 0;
+      do { c = Math.floor(Math.random() * 21) - 10; } while (c === 0 || c === 1);
+      do { b = Math.floor(Math.random() * 21) - 10; } while (b === 0);
+      do { d = Math.floor(Math.random() * 21) - 10; } while (d === 0);
+    }
+  } 
+  
+  else if (l === 3) {
+    do {
+      a = Math.floor(Math.random() * 21) - 10;
+      c = Math.floor(Math.random() * 21) - 10;
+    } while (a === c || a === 0 || c === 0 || Math.abs(a - c) === 1);
+
+    do { b = Math.floor(Math.random() * 21) - 10; } while (b === 0);
+    do { d = Math.floor(Math.random() * 21) - 10; } while (d === 0);
+  } 
+  
+  else {
+    return; // Do nothing if l is not set
   }
 
   renderEquation();
@@ -298,16 +335,17 @@ if (
     }
 
  function handleNewEquation() {
-  if (l === 3) {
-    generateEquation(); // Only generate when l = 3
+  if (l !== null) { // Only generate if l has been set
+    generateEquation();
     window.scrollTo(0, 0); // Scroll to the top of the page
   }
 }
 
+
 // Add event listener to the top button for generating a new equation
 window.onload = () => {
-    document.getElementById("new-equation-l1").addEventListener("click", () => { l = 1; });
-document.getElementById("new-equation-l2").addEventListener("click", () => { l = 2; });
+    document.getElementById("new-equation-l1").addEventListener("click", () => { l = 1; handleNewEquation(); });
+document.getElementById("new-equation-l2").addEventListener("click", () => { l = 2; handleNewEquation(); });
 document.getElementById("new-equation-l3").addEventListener("click", () => { l = 3; handleNewEquation(); });
 };
 
