--- a/index.html
+++ b/index.html
@@ -90,13 +90,12 @@
     let successCount = 0;
     let inputCount = 0; // Track number of user inputs
 
-function updateScore(bonusPoints) {
-  // Add base 3 points and bonus points to the score
-  const totalPoints = 3 + bonusPoints;
+function updateScore(basePoints, bonusPoints) {
+  // Add base points and bonus points to the score
+  const totalPoints = basePoints + bonusPoints;
   score += totalPoints;
   document.getElementById("score-box").textContent = `Score = ${score}`;
 }
-
     function formatNumber(num) {
   // If the absolute value of the number is less than 0.0005, return '0' or '-0' depending on the sign
   if (Math.abs(num) < 0.0005) {
@@ -233,25 +232,49 @@ if (
   successMessage.textContent = `Well done! You have solved the equation. x = ${solution}`;
   equationContainer.appendChild(successMessage);
 
-  // Bonus points logic
-  let pointsMessage = "Points: 3";
-  let bonusPoints = 0;
+// Bonus points logic
+let basePoints = 0;
+let bonusPoints = 0;
+let pointsMessage = "Points: ";
 
+// Determine base points based on level
+if (l === 1) {
+  basePoints = 1;
+  if (inputCount === 1) {
+    bonusPoints = 1;
+    pointsMessage += "1 +1 bonus";
+  } else {
+    pointsMessage += "1";
+  }
+} else if (l === 2) {
+  basePoints = 3;
+  if (inputCount === 1) {
+    bonusPoints = 2;
+    pointsMessage += "3 +2 bonus";
+  } else if (inputCount === 2) {
+    bonusPoints = 1;
+    pointsMessage += "3 +1 bonus";
+  } else {
+    pointsMessage += "3";
+  }
+} else if (l === 3) {
+  basePoints = 5;
   if (inputCount <= 3) {
     bonusPoints = 3;
-    pointsMessage += " +3 bonus";
+    pointsMessage += "5 +3 bonus";
   } else if (inputCount === 4) {
     bonusPoints = 2;
-    pointsMessage += " +2 bonus";
+    pointsMessage += "5 +2 bonus";
   } else if (inputCount === 5) {
     bonusPoints = 1;
-    pointsMessage += " +1 bonus";
+    pointsMessage += "5 +1 bonus";
   } else {
-    bonusPoints = 0; // No bonus points for 6 or more inputs
+    pointsMessage += "5";
   }
+}
 
-  // Update the score with base points and bonus points
-  updateScore(bonusPoints);
+// Update the score with base points and bonus points
+updateScore(basePoints, bonusPoints);
 
   // Display the points message
   const pointsDiv = document.createElement("div");
